--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>Diseño MX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="fartApp">
@@ -47,8 +47,6 @@
     </ul>  
   </div>
 </div>
-
-
   {% block content %}
 <div class="row-fluid gray">
   <div class="span12">
@@ -72,28 +70,97 @@
 </div>
 
 <div class="row-fluid grayless">
-  <div class="span3 offset2">
+  <div class="span4">
     <div class="product ">
+      <div class="well wel-small"> Test</div>
+      <p>
       asdsad
+      </p>
+      <a href="">
+        <img class="" src="http://lorempixel.com/380/240/fashion">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
     </div>
-      
   </div>
-  <div class="span3 ">
+  <div class="span4 ">
     <div class="product ">
+      <div class="well wel-small"> Test</div>
+      <p>
       asdsad
+      </p>
+      <a href="">
+        <img class="" src="http://lorempixel.com/380/240/fashion/8">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
     </div>
-      
   </div>
-  <div class="span3 ">
-    <div class="product">
+   <div class="span4 ">
+    <div class="product ">
+      <div class="well wel-small"> Test</div>
+      <p>
       asdsad
+      </p>
+      <a href="">
+        <img class="" src="http://lorempixel.com/380/240/fashion/4">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
     </div>
-      
   </div>
-
 </div>
-    
+
+<div class="row-fluid morelessgray">
+    <div class="well">Ultimos productos</div>
+</div>
+<div class="row-fluid morelessgray">
+  <div class="span3 ">
+    <div class="product ">
+      <a href="">
+        <img class="" src="http://lorempixel.com/300/240/fashion/7">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
+    </div>
+  </div>
+  <div class="span3 ">
+    <div class="product ">
+      <a href="">
+        <img class="" src="http://lorempixel.com/300/240/fashion/8">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
+    </div>
+  </div>
+  <div class="span3 ">
+    <div class="product ">
+      <a href="">
+        <img class="" src="http://lorempixel.com/300/240/fashion/9">
+      </a>
+      <span class="cost">$ 999.99 MXN</span>
+    </div>
+  </div>
+  <div class="span3 ">
+      <div class="product ">
+        <a href="">
+          <img class="" src="http://lorempixel.com/300/240/fashion/10">
+        </a>
+      </div>
+    </div>
+</div>
   {% endblock content %}
+
+  <div class="row-fluid dark">
+    <div class="span4 "> 
+      <div>
+        <h2>Sobre Nosotros.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisi mi, feugiat a lobortis at, suscipit nec lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sed mauris nibh. Duis adipiscing tristique ligula eu dapibus. Integer imperdiet risus non sem semper et ullamcorper nunc convallis. Morbi euismod adipiscing nulla, quis accumsan erat tempus auctor. Proin vel lorem in leo dignissim convallis vitae eget sem. Aliquam auctor tellus id nibh vehicula luctus. Ut lobortis elit eu mauris iaculis euismod at id diam. Suspendisse et risus a dui hendrerit rhoncus. Nunc eu elit quis eros hendrerit venenatis. Aenean in elementum est. Curabitur accumsan rutrum erat eu elementum.
+        </p>
+      </div>
+    </div>   
+    <div class="span7 "> 
+      <div>
+        <h3>Testimonios</h3>
+      </div>
+    </div>   
+  </div>
 
    
   </body>
