--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -12,6 +12,7 @@
     <!-- Le styles -->
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="{{STATIC_URL}}bootstrap/css/flat-ui.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -64,7 +65,7 @@
                <img src="{{MEDIA_URL}}image/slider.png" alt=""  />
             </div>
         </div-->
-        <img src="{{MEDIA_URL}}image/slider.png" alt=""  />
+          <img src="{{MEDIA_URL}}image/slider.png" alt=""  />
       </div>
   </div>
 </div>
@@ -79,7 +80,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/380/240/fashion">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="">$ 999.99 MXN</span>
     </div>
   </div>
   <div class="span4 ">
@@ -91,7 +92,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/380/240/fashion/8">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
    <div class="span4 ">
@@ -103,7 +104,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/380/240/fashion/4">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
 </div>
@@ -117,7 +118,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/7">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
   <div class="span3 ">
@@ -125,7 +126,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/8">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
   <div class="span3 ">
@@ -133,7 +134,7 @@
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/9">
       </a>
-      <span class="cost">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
   <div class="span3 ">
