--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -41,9 +41,9 @@
         <img id="logo" src="http://i.imgur.com/TvLoWwq.png">
     </div>
     <ul class="site-nav">
-        <li><a href=""><span>inicio</span></a></li>
-        <li><a href=""><span>Zapatos</span></a></li>
-        <li><a href=""><span>Ropa</span></a></li>
+        <li><a href="#"><span>inicio</span></a></li>
+        <li><a href="#"><span>Zapatos</span></a></li>
+        <li><a href="#"><span>Ropa</span></a></li>
 
     </ul>  
   </div>
@@ -77,10 +77,10 @@
       <p>
       asdsad
       </p>
-      <a href="">
+      <a href="#">
         <img class="" src="http://lorempixel.com/380/240/fashion">
       </a>
-      <span class="">$ 999.99 MXN</span>
+      <span class="palette palette-firm-dark">$ 999.99 MXN</span>
     </div>
   </div>
   <div class="span4 ">
@@ -114,7 +114,7 @@
 </div>
 <div class="row-fluid morelessgray">
   <div class="span3 ">
-    <div class="product ">
+    <div class="medium-product ">
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/7">
       </a>
@@ -122,7 +122,7 @@
     </div>
   </div>
   <div class="span3 ">
-    <div class="product ">
+    <div class="medium-product ">
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/8">
       </a>
@@ -130,18 +130,21 @@
     </div>
   </div>
   <div class="span3 ">
-    <div class="product ">
+    <div class="medium-product ">
       <a href="">
         <img class="" src="http://lorempixel.com/300/240/fashion/9">
       </a>
       <span class="palette palette-firm-dark">$ 999.99 MXN</span>
+      <p>Designer #1</p>
     </div>
   </div>
   <div class="span3 ">
-      <div class="product ">
+      <div class="medium-product ">
         <a href="">
           <img class="" src="http://lorempixel.com/300/240/fashion/10">
         </a>
+          <span class="palette palette-firm-dark">$ 999.99 MXN</span>
+        <p>Designer #1</p>
       </div>
     </div>
 </div>
