--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -63,22 +63,17 @@ font-family: 'Open Sans', sans-serif;
     margin-top: 62px;
 }
 
-
-.myslider {
-	width: 100%;
-	height: 600px;
-	display: block; 
-	vertical-align: middle 
-}
-.myslider img {
-	display: block; 
-	margin-top:100px;
-	margin-right: auto;
-	margin-left: auto;
-	width: 950px;
-	
+#sli {
+    height:600px;
 }
 
+#myslider {
+
+}
+#myslider .item  img{
+    height:600px;
+    width:100%;
+}
 .gray {
 	background: none repeat scroll 0 0 #9FA5A6;
     overflow: hidden;
