--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -48,7 +48,7 @@
 </head>
 
   <body>
-
+{% block body %}
 <div class="row-fluid menu">
   <div class="span12">
     <div class="padding-logo">
@@ -185,6 +185,6 @@ $(document).ready(function(){
     </div>   
   </div>
 
-   
+{% endblock %}   
   </body>
 </html>
