--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -7,7 +7,8 @@ font-family: 'Open Sans', sans-serif;
 
 	height: 140px;
 	width:100%;
-	background-color: #171A1A;
+/*	background-color: #171A1A;*/
+    background-color:white;
 }
 .padding-logo {
 	padding-top:5px;
