--- a/example/templates/shop/product_list.html
+++ b/example/templates/shop/product_list.html
@@ -2,15 +2,41 @@
 {% load i18n %}
 
 {% block content %}
-<div class="row-fluid
-  <h1>{% trans "Order list" %}</h1>
+<div class="row-fluid">
+  <div class="span9 offset1">
+      {%for i in categories%} 
+      <div class="palette palette-clouds">{{i.name}}</div>
+      {% endfor %}
+  </div>
+</div>
 
-  <ul>
-    {% for order in object_list  %}
-    <li>
-      <a href="{{ order.get_absolute_url }}">{{ order }}</a>
-    </li>
-    {% endfor %}
-  </ul>
+
+<div class="row-fluid">
+  <div class="span9 offset1">
+  <h1>Todos los productos</h1>
+
+   {% for object in object_list %}
+  <a href="{% url 'product_detail' object.slug %}">{{object.get_name}}</a><br />
+  {{object.slug}}<br />
+  {{object.short_description}}<br />
+  {{object.long_description}}<br />
+  {{object.active}}<br />
+
+  {{object.date_added}}<br />
+  {{object.last_modified}}<br />
+
+  {{object.unit_price}}<br />
+
+  {% if object.category %}
+  {{object.category.name}}<br />
+  {% else %}
+  (Product is at root category)<br />
+  {% endif %}
+  <hr />
+
+  {% endfor %}
+
+  </div>
+</div>
 {% endblock %}
 
