--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -74,7 +74,9 @@ font-family: 'Open Sans', sans-serif;
 }
 #myslider .item  img{
     height:600px;
-    width:100%;
+    width:950px;
+    margin-left:auto;
+    margin-right: auto;
 }
 .gray {
 	background: none repeat scroll 0 0 #9FA5A6;
@@ -96,7 +98,8 @@ font-family: 'Open Sans', sans-serif;
 }
 .medium-product {
 	margin:20px;
-	height:250px;
+	height:350px;
+    margin-bottom:50px;
     background: none repeat scroll 0 0 white;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
      -moz-box-sizing: border-box;
@@ -105,7 +108,8 @@ font-family: 'Open Sans', sans-serif;
 
 }
 .medium-product p{
-    margin-top:50px;
+
+    margin-top:30px;
 }
 .product {
 	margin:20px;
