--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -1,4 +1,4 @@
-{% load myshop_tags %}
+{% load myshop_tags  thumbnail %}
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -73,10 +73,9 @@
         </script>
             <div id="myslider" class="carousel slide">
                   <div class="carousel-inner">
-                    <div class="item active"><img src="http://i.imgur.com/Mj2kO4p.png"></div>
-                    
-                       <div class="item "> <img src="{{MEDIA_URL}}image/slider2.png" alt=""  /></div>
-
+                    {%for manufacture in manufactures %}
+                    <div class="item "> <img src="{% thumbnail manufacture.logo_front 800x600 %}" alt=""  /></div>
+                      {%endfor %}
                     </div>
                  <a class="carousel-control left" href="#myslider" data-slide="prev">&lsaquo;</a>
                   <a class="carousel-control right" href="#myslider" data-slide="next">&rsaquo;</a>
@@ -86,42 +85,21 @@
         </div>
 
         <div class="row-fluid grayless">
+          {%for product in products %}
           <div class="span4">
             <div class="product ">
-              <div class="well wel-small"> Test</div>
+              <div class="well wel-small"> {{product.name}}</div>
               <p>
-              asdsad
+              {{product.category.name}}
               </p>
               <a href="#">
-                <img class="" src="http://placehold.it/500x240/">
+                <img class="" src="{% thumbnail product.image 300x220 %}">
               </a>
-              <span class="palette palette-firm-dark">$ 999.99 MXN</span>
+              <span class="palette palette-firm-dark">$ {{product.unit_price}} MXN</span>
             </div>
+           </div>
           </div>
-          <div class="span4 ">
-            <div class="product ">
-              <div class="well wel-small"> Test</div>
-              <p>
-              asdsad
-              </p>
-              <a href="">
-                <img class="" src="http://placehold.it/500x240/">
-              </a>
-              <span class="palette palette-firm-dark">$ 999.99 MXN</span>
-            </div>
-          </div>
-           <div class="span4 ">
-            <div class="product ">
-              <div class="well wel-small"> Test</div>
-              <p>
-              asdsad
-              </p>
-              <a href="">
-                <img class="" src="http://placehold.it/500x240">
-              </a>
-              <span class="palette palette-firm-dark">$ 999.99 MXN</span>
-            </div>
-          </div>
+          {% endfor %}
         </div>
 
         <div class="row-fluid morelessgray">
