--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -53,7 +53,7 @@
   <div class="row-fluid menu">
     <div class="span12">
       <div class="padding-logo">
-          <img id="logo" src="http://i.imgur.com/TvLoWwq.png">
+        <a href="/"><img id="logo" src="http://i.imgur.com/TvLoWwq.png"></a>
       </div>
       <ul class="site-nav">
           {%show_menu %}
