--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -1,14 +1,17 @@
-@import url ("http://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C700italic%2C400%2C300%2C700&ver=1.0");
+import url ("http://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C700italic%2C400%2C300%2C700&ver=1.0");
 
 body {
 font-family: 'Open Sans', sans-serif;
 }
 .menu  {
+        background: #323539;
+    -webkit-box-shadow: rgba(255,255,255,0.08) 0px 1px 0px inset;
+    box-shadow: rgba(255,255,255,0.08) 0px 1px 0px inset;
 
 	height: 140px;
 	width:100%;
 /*	background-color: #171A1A;*/
-    background-color:white;
+   
 }
 .padding-logo {
 	padding-top:5px;
@@ -66,15 +69,17 @@ font-family: 'Open Sans', sans-serif;
 
 
 #sli {
-    height:600px;
+
+min-height: 0px;
 }
 
-#myslider {
+.carousel {
+    margin-bottom:0px;
 
 }
 #myslider .item  img{
-    height:600px;
-    width:950px;
+    height: 300px;
+   
     margin-left:auto;
     margin-right: auto;
 }
@@ -107,6 +112,10 @@ font-family: 'Open Sans', sans-serif;
     text-align: center;    
 
 }
+.medium-product img {
+
+    height: 340px;
+}
 .medium-product p{
 
     margin-top:30px;
@@ -114,14 +123,14 @@ font-family: 'Open Sans', sans-serif;
 .product {
 	margin:20px;
 	height:380px;
- background: none repeat scroll 0 0 white;
+     background: none repeat scroll 0 0 white;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
      -moz-box-sizing: border-box;
     padding: 20px;
     text-align: center;    
 }
 .product img {
-    width:100%;
+  
     height: 240px;
 
 }
