--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -2,6 +2,7 @@ import url ("http://fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400i
 
 body {
 font-family: 'Open Sans', sans-serif;
+background: none repeat scroll 0 0 #F4F4F4;
 }
 .menu  {
         background: #323539;
@@ -88,7 +89,10 @@ min-height: 0px;
     overflow: hidden;
     width: 100%;
 }
-
+.graycontainer {
+background: none repeat scroll 0 0 #9FA5A6;
+    
+}
 .grayless {
 	width: 100%;
 	overflow: hidden;
@@ -101,6 +105,12 @@ min-height: 0px;
     background: none repeat scroll 0 0 #F4F4F4;
  
 }
+
+.colormorelessgray{
+
+    background: none repeat scroll 0 0 #F4F4F4;
+}
+
 .medium-product {
 	margin:20px;
 	height:350px;
@@ -185,4 +195,49 @@ min-height: 0px;
 
 .noleftmargin {
     margin-left:0px;
+}
+
+.square {
+
+    background: none repeat scroll 0 0 white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+     -moz-box-sizing: border-box;
+    margin-top: 40px;
+    text-align: center;  
+
+}
+
+.spaceup {
+
+margin-top: 40px;
+
+}
+
+.main-image {
+    text-align: center;
+
+}
+.main-image img {
+    margin-right: auto;
+    margin-left: auto;
+    min-height:300px;
+
+}
+
+.no-space [class*="span"] {
+    margin-left: 0;
+}
+
+.no-space {
+    margin-left:0;
+}
+
+
+.control-group label {
+    font-size: 16px;
+
+}
+.center {
+    text-align: center;
+
 }
