--- a/example/templates/shop/product_list.html
+++ b/example/templates/shop/product_list.html
@@ -1,14 +1,12 @@
 {% extends "shop/base.html" %}
 {% load i18n thumbnail %}
 {% block content %}
-
-
-<div class="row-fluid gray">
-  <div class="well"><h1>{{object.name}}</h1></div>
   
+  <div class="container-fluid graycontainer">
+    <div class="well"><h1>{{object.name}}</h1></div>
     <div class="row-fluid">
       {% for object in object_list %}      
-      <div class="span3"  {%if forloop.counter|divisibleby:"4"%} style="margin-left:0px;" {%endif%}>
+      <div class="span3"  {%if forloop.counter0|divisibleby:"4"%} style="margin-left:0px;" {%endif%}>
         <div class="product-list">
           <div class="name">
             <a href="{% url 'product_detail' object.slug %}">
@@ -24,8 +22,10 @@
       </div>
       
       {% endfor %}
+   
     </div>
   
 </div>
 </div>
+
 {% endblock %}
