--- a/example/templates/shop/product_detail.html
+++ b/example/templates/shop/product_detail.html
@@ -77,7 +77,7 @@ img.show();
     </div>
     <div class="span6 spaceup">
       <div class="tile">
-        <h3 class="tile-title palette palette-night">{{object.get_name}}</h3>
+        <h3 class="tile-title palette palette-alizarin">{{object.get_name}}</h3>
         
         
         <h2> $ {{object.unit_price}} MXN </h2>
@@ -126,7 +126,7 @@ img.show();
         {% endwith %}
         <input type="hidden" name="add_item_id" value="{{object.pk}}">
         <input type="hidden" name="add_item_quantity" value="1">
-        <input type="submit" class="btn btn-large btn-block btn-danger" value="Add to cart">
+        <input type="submit" class="btn btn-large btn-block spaceup" value="Add to cart">
       </form>
     </div>
   </div>
