--- a/example/templates/shop/shipping/flat_rate/display_fees.html
+++ b/example/templates/shop/shipping/flat_rate/display_fees.html
@@ -1,7 +1,14 @@
 {% extends "shop/base.html" %}
 {% load url from future %}
 
-{% block body %}
-  <p>You will be charged {{shipping_costs}} for shipping</p><br />
-  <a href="{% url 'flat_process' %}">Proceed</a>
+{% block content %}
+<div class="row-fluid spaceup">
+
+	<div class="span4 offset4 ">
+		<div class="well">
+  			<p>Se te agregara un costo de: {{shipping_costs}} Por envio</p><br />
+  		<a class="btn btn-primary btn-block" href="{% url 'flat_process' %}">Continuar</a>
+  		</div>
+	</div>
+</div>
 {% endblock %}
