--- a/example/templates/shop/templatetags/_order.html
+++ b/example/templates/shop/templatetags/_order.html
@@ -1,69 +1,69 @@
 {% load i18n %}
-
 <h3>
-  {% trans "Order ID:" %} {{ order.pk }}
+{% trans "Orden ID:" %} {{ order.pk }}
 </h3>
-
 <p>
-  {% trans "Order Status" %}: {{ order.get_status_display }}
+{% trans "Orden Estado" %}: {{ order.get_status_display }}
 </p>
-
-<table class="order-address" border="1">
+<table class="table table-bordered">
   <tr>
     <td style="vertical-align:top;">
-      <strong>{% trans "Shipping Address" %}</strong><br>
-      {% if order.shipping_address_text %}<textarea>{{ order.shipping_address_text }}</textarea>{% endif %}
+      <strong>{% trans "Dirección de envio." %}</strong><br>
+      {% if order.shipping_address_text %}<textarea  row="5" style="width:90%;">{{ order.shipping_address_text }}</textarea>{% endif %}
     </td>
     <td style="vertical-align:top;">
-      <strong>{% trans "Billing Address" %}</strong><br>
-      {% if order.billing_address_text %}<textarea>{{ order.billing_address_text }}</textarea>{% endif %}
+      <strong>{% trans "Dirección del pago." %}</strong><br>
+      {% if order.billing_address_text %}<textarea style="width:90%" row="5">{{ order.billing_address_text }}</textarea>{% endif %}
     </td>
   </tr>
 </table>
-
-<table border="1" class="order">
+<table class="table table-bordered">
   <thead>
-    <tr>
-    <th>{% trans "Product name" %}</th>
-    <th>{% trans "Unit price" %}</th>
-    <th>{% trans "Quantity" %}</th>
-    <th>&nbsp;</th>
+    <tr class="palette palette-night">
+      <th>{% trans "Nombre" %}</th>
+      <th>{% trans "Precio" %}</th>
+      <th>{% trans "Cantidad" %}</th>
+      <th>&nbsp;</th>
     </tr>
   </thead>
-
   <tbody>
     {% for item in order.items.all %}
-      <tr>
-        <td>{{item.product_name}}</td>
-        <td>{{ item.unit_price }}</td>
-        <td>{{item.quantity}}</td>
-        <td>{{item.line_subtotal }}</td>
-      </tr>
-      {% for item_extra in item.extraorderitempricefield_set.all %}
-        <tr>
-          <td colspan="2">&nbsp;</td>
-          <td>{{ item_extra.label }}</td>
-          <td>{{ item_extra.value }}</td>
-        </tr>
-      {% endfor %}
-      <tr><td colspan="2">&nbsp;</td><td>{% trans "Line Total" %}:</td><td>{{item.line_total }}</td></tr>
+    <tr>
+      <td>{{item.product_name}}</td>
+      <td>{{ item.unit_price }}</td>
+      <td>{{item.quantity}}</td>
+      <td> $ {{item.line_subtotal }} MXN</td>
+    </tr>
+    {% for item_extra in item.extraorderitempricefield_set.all %}
+    <tr>
+      <td colspan="2">&nbsp;</td>
+      <td>{{ item_extra.label }}</td>
+      <td>{{ item_extra.value }}</td>
+    </tr>
+    {% endfor %}
+    <tr>
+      <td colspan="2">&nbsp;</td>
+      <td>{% trans "Line Total" %}:</td>
+      <td> $ {{item.line_total }} MXN</td>
+    </tr>
     {% endfor %}
   </tbody>
-
   <tfoot>
-    <tr><td colspan="2">&nbsp;</td><td>{% trans "Order Subtotal" %}</td><td>{{order.order_subtotal }}</td></tr>
-    {% for extra_price_field in order.extraorderpricefield_set.all %}
-      <tr>
-        <td colspan="2">&nbsp;</td>
-        <td>{{ extra_price_field.label }}</td>
-        <td>{{ extra_price_field.value }}</td>
-      </tr>
-    {% endfor %}
-    <tr><td colspan="2">&nbsp;</td><td><b>{% trans "Order Total" %}</b></td><td><b>{{order.order_total}}</b></td></tr>
+  <tr><td colspan="2">&nbsp;</td><td>{% trans "Order Subtotal" %}</td><td>{{order.order_subtotal }}</td></tr>
+  {% for extra_price_field in order.extraorderpricefield_set.all %}
+  <tr>
+    <td colspan="2">&nbsp;</td>
+    <td>{{ extra_price_field.label }}</td>
+    <td>{{ extra_price_field.value }}</td>
+  </tr>
+  {% endfor %}
+  <tr>
+    <td colspan="2">&nbsp;</td>
+    <td><b>{% trans "Order Total" %}</b></td>
+    <td><b> $ {{order.order_total}} MXN</b></td>
+  </tr>
   </tfoot>
 </table>
-
 {% for extra_info in order.extra_info.all  %}
-  <p>{{ extra_info.text }}</p>
+    <p>{{ extra_info.text }}</p>
 {% endfor %}
-
