--- a/example/templates/shop_paypal/payment.html
+++ b/example/templates/shop_paypal/payment.html
@@ -2,7 +2,7 @@
 {% load i18n  thumbnail %}
 {% load url from future %}
 {% block content %}
-<div class="row-fluid lessgray">
+<div class="row-fluid lessgray center">
 
   <div class="well center">
   		<h1>{% trans "Paypal" %}</h1>
