--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -1,4 +1,4 @@
-{% load myshop_tags  thumbnail %}
+{% load myshop_tags  thumbnail i18n %}
 <!DOCTYPE HTML>
 <html lang="en">
   <head>
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="fartApp">
-
     
     <!-- Le styles -->
     <link href="{{STATIC_URL}}bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -15,19 +14,16 @@
     <link href="{{STATIC_URL}}bootstrap/css/flat-ui.css" rel="stylesheet">
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="{{STATIC_URL}}bootstrap/ico/favicon.ico">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{STATIC_URL}}bootstrap/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{STATIC_URL}}bootstrap/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{STATIC_URL}}bootstrap/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}bootstrap/ico/apple-touch-icon-57-precomposed.png">
-
-
-<link href="{{MEDIA_URL}}ui.css" rel="stylesheet">
- <!-- Load JS here for greater good =============================-->
+    <link href="{{MEDIA_URL}}ui.css" rel="stylesheet">
+    <!-- Load JS here for greater good =============================-->
     <script src="{{STATIC_URL}}bootstrap/js/jquery-1.8.2.min.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/jquery-ui-1.10.0.custom.min.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/jquery.dropkick-1.0.0.js"></script>
@@ -39,113 +35,116 @@
     <script src="http://vjs.zencdn.net/c/video.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/application.js"></script>
     <!--[if lt IE 8]>
-      <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7.js"></script>
-      <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7-24.js"></script>
+    <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7.js"></script>
+    <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7-24.js"></script>
     <![endif]-->
-
     <script src="{{STATIC_URL}}bootstrap/js/bootstrap.min.js"></script>
-
     {% block extrajs %}{%endblock%}
-</head>
-
+  </head>
   <body>
-{% block body %}
+    {% block body %}
   <div class="row-fluid menu ">
-    <div class="span12">
-      <div class="padding-logo">
-        <a href="/"><img id="logo" src="{{MEDIA_URL}}image/logo.png"></a>
+    <div class="span3">
+        <div class="center">
+          <a href="/"><img id="logo" src="{{MEDIA_URL}}image/logo.png"></a>
+        </div>
       </div>
-      <ul class="site-nav">
+      <div class="span7">
+        <ul class="site-nav">
           {%show_menu %}
-      </ul>  
+        </ul>
+      </div>
+      <div class="span2" style="padding-top:15px;">
+        
+        <div class="palette palette-clouds">
+          <a href="{% url 'cart' %}">Your cart</a><br />
+        </div>
+        {% if user.is_authenticated %}
+              <div class="palette palette-asbestos">
+                {% trans "Hello" %} {{ user }}<br>
+                   <a href="{% url 'order_list' %}">{% trans "Your orders" %}</a>
+              </div>
+          {% endif %}
+        
+      </div>
     </div>
   </div>
-
-
   {% block content %}
-        <div class="row-fluid gray">
-          <div class="span12">
-        <div id="sli">
+  <div class="row-fluid gray">
+    <div class="span12">
+      <div id="sli">
         <script>
         $(document).ready(function(){
-
-          $("#myslider").carousel();
+        $("#myslider").carousel();
         });
-
         </script>
-            <div id="myslider" class="carousel slide">
-                  <div class="carousel-inner">
-                    {%for manufacture in manufactures %}
-                    <div class="item {%if forloop.first %}active{%endif%}"> 
-                              <img src="{% thumbnail manufacture.logo_front 800x600 %}" alt=""  />
-                    </div>
-                      {%endfor %}
-                    </div>
-                 <a class="carousel-control left" href="#myslider" data-slide="prev">&lsaquo;</a>
-                  <a class="carousel-control right" href="#myslider" data-slide="next">&rsaquo;</a>
-              </div>
-          </div>
-        </div>
-        </div>
-
-        <div class="row-fluid grayless">
-          {%for product in products %}
-          <div class="span4">
-                <div class="product ">
-                    <div class="well wel-small"> {{product.name}}</div>
-                        <p>
-                        {{product.category.name}}
-                        </p>
-                        <a href="{% url 'product_detail' product.slug %}">
-                          <img class="" src="{% thumbnail product.image 300x220 %}">
-                        </a>
-                        <div class="clearfix"></div>
-                        <span class="palette palette-firm-dark">$ {{product.unit_price}} MXN</span>
-                </div>
-          </div>
-          {% endfor %}
-        </div>
-
-        <div class="row-fluid morelessgray">
-            <div class="well">Ultimos productos</div>
-        </div>
-        <div class="row-fluid morelessgray">
-          {%for product in lastest_products %}
-          <div class="span3 ">
-
-            <div class="medium-product ">
-              <a href="{% url 'product_detail' product.slug %}">
-                <img class="" src="{% thumbnail product.image 300x340 %}">
-              </a>
-                <div class="clearfix"></div>
-              <span class="palette palette-firm-dark">$ {{product.unit_price}}  MXN</span>
+        <div id="myslider" class="carousel slide">
+          <div class="carousel-inner">
+            {%for manufacture in manufactures %}
+            <div class="item {%if forloop.first %}active{%endif%}">
+              <img src="{% thumbnail manufacture.logo_front 800x600 %}" alt=""  />
             </div>
-
+            {%endfor %}
           </div>
-          {%endfor %}
-       </div>
+          <a class="carousel-control left" href="#myslider" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#myslider" data-slide="next">&rsaquo;</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row-fluid grayless">
+    {%for product in products %}
+    <div class="span4">
+      <div class="product ">
+        <div class="well wel-small"> {{product.name}}</div>
+        <p>
+        {{product.category.name}}
+        </p>
+        <a href="{% url 'product_detail' product.slug %}">
+        <img class="" src="{% thumbnail product.image 300x220 %}">
+        </a>
+        <div class="clearfix"></div>
+        <span class="palette palette-firm-dark">$ {{product.unit_price}} MXN</span>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+  <div class="row-fluid morelessgray">
+    <div class="well">Ultimos productos</div>
+  </div>
+  <div class="row-fluid morelessgray">
+    {%for product in lastest_products %}
+    <div class="span3 ">
+      <div class="medium-product ">
+        <a href="{% url 'product_detail' product.slug %}">
+        <img class="" src="{% thumbnail product.image 300x340 %}">
+        </a>
+        <div class="clearfix"></div>
+        <span class="palette palette-firm-dark">$ {{product.unit_price}}  MXN</span>
+      </div>
+    </div>
+    {%endfor %}
+  </div>
   {% endblock content %}
-
   <div class="row-fluid dark">
-    <div class="span4 "> 
+    <div class="span4 ">
       <div>
         <h2>Sobre Nosotros.</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisi mi, feugiat a lobortis at, suscipit nec lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sed mauris nibh. Duis adipiscing tristique ligula eu dapibus. Integer imperdiet risus non sem semper et ullamcorper nunc convallis. Morbi euismod adipiscing nulla, quis accumsan erat tempus auctor. Proin vel lorem in leo dignissim convallis vitae eget sem. Aliquam auctor tellus id nibh vehicula luctus. Ut lobortis elit eu mauris iaculis euismod at id diam. Suspendisse et risus a dui hendrerit rhoncus. Nunc eu elit quis eros hendrerit venenatis. Aenean in elementum est. Curabitur accumsan rutrum erat eu elementum.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisi mi, feugiat a lobortis at, suscipit nec lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sed mauris nibh. Duis adipiscing tristique ligula eu dapibus. Integer imperdiet risus non sem semper et ullamcorper nunc convallis. Morbi euismod adipiscing nulla, quis accumsan erat tempus auctor. Proin vel lorem in leo dignissim convallis vitae eget sem. Aliquam auctor tellus id nibh vehicula luctus. Ut lobortis elit eu mauris iaculis euismod at id diam. Suspendisse et risus a dui hendrerit rhoncus. Nunc eu elit quis eros hendrerit venenatis. Aenean in elementum est. Curabitur accumsan rutrum erat eu elementum.
         </p>
       </div>
-    </div>   
-    <div class="span7 "> 
+    </div>
+    <div class="span7 ">
       <div>
         <h3>Contacto</h3>
-<div >
-<p><span style="color: #ff0000;">CEO. Mónica A. Aguilar Gomez</span></p>
-<p><a href="/">Para contactarnos y saber más sobre el proyecto</a></p>
-</div>
+        <div >
+          <p><span style="color: #ff0000;">CEO. Mónica A. Aguilar Gomez</span></p>
+          <p><a href="/">Para contactarnos y saber más sobre el proyecto</a></p>
+        </div>
       </div>
-    </div>   
+    </div>
   </div>
-
-{% endblock %}   
-  </body>
+  {% endblock %}
+</body>
 </html>
