--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -34,6 +34,8 @@
     <script src="{{STATIC_URL}}bootstrap/js/jquery.placeholder.js"></script>
     <script src="http://vjs.zencdn.net/c/video.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/application.js"></script>
+    <script src="{{MEDIA_URL}}fullbg.js"></script>
+
     <!--[if lt IE 8]>
     <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7.js"></script>
     <script src="{{STATIC_URL}}bootstrap/js/icon-font-ie7-24.js"></script>
@@ -57,12 +59,15 @@
       <div class="span2" style="padding-top:15px;">
         
         <div class="palette palette-clouds">
-          <a href="{% url 'cart' %}">Your cart</a><br />
+          <a href="{% url 'cart' %}">
+           Tu carrito
+          </a>
+          <br />
         </div>
         {% if user.is_authenticated %}
               <div class="palette palette-asbestos">
                 {% trans "Hello" %} {{ user }}<br>
-                   <a href="{% url 'order_list' %}">{% trans "Your orders" %}</a>
+                   <a href="{% url 'order_list' %}">{% trans "Tus ordenes" %}</a>
               </div>
           {% endif %}
         
