--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -26,6 +26,8 @@ background: none repeat scroll 0 0 #F4F4F4;
 	height: 120px;
 }
 
+
+
 .site-nav {
     float: left;
     height: 140px;
@@ -130,6 +132,9 @@ background: none repeat scroll 0 0 #9FA5A6;
 
     margin-top:30px;
 }
+
+
+
 .product {
 	margin:20px;
 	height:380px;
@@ -169,6 +174,23 @@ background: none repeat scroll 0 0 #9FA5A6;
 
 .dark div div {
     margin:80px;
+}
+
+
+.manufacture-list {
+
+    margin:20px;
+    height:150px;
+     background: none repeat scroll 0 0 white;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+     -moz-box-sizing: border-box;
+    padding: 20px;
+    text-align: center;  
+}
+
+.manufacture-list img {
+    min-height:128px;
+
 }
 
 
