--- a/example/media/ui.css
+++ b/example/media/ui.css
@@ -229,6 +229,11 @@ background: none repeat scroll 0 0 #9FA5A6;
 
 }
 
+.spacedown {
+    margin-bottom:40px;
+
+}
+
 .spaceup {
 
 margin-top: 40px;
