--- a/example/templates/shop/order_detail.html
+++ b/example/templates/shop/order_detail.html
@@ -11,7 +11,7 @@
 		
 	</div>
 	<div class="row-fluid">
-		<div class="offset2 span8 square">
+		<div class="offset2 span8 square spacedown">
 			  {% order object %}
 		</div>
 	</div>
