--- a/example/templates/shop/order_list.html
+++ b/example/templates/shop/order_list.html
@@ -8,7 +8,7 @@
 		
 	</div>
 	<div class="row-fluid">
-		<div class="offset2 span8 square">
+		<div class="offset2 span8 square spacedown">
 			
 			<ul class="unstyled">
 				{% for order in object_list  %}
