--- a/example/templates/shop/base.html
+++ b/example/templates/shop/base.html
@@ -141,7 +141,7 @@
   {% endblock content %}
   <div class="row-fluid dark">
     <div class="span4 ">
-      <div>
+      <div class="spaceup">
         <h2>Sobre Nosotros.</h2>
         <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nisi mi, feugiat a lobortis at, suscipit nec lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nunc sed mauris nibh. Duis adipiscing tristique ligula eu dapibus. Integer imperdiet risus non sem semper et ullamcorper nunc convallis. Morbi euismod adipiscing nulla, quis accumsan erat tempus auctor. Proin vel lorem in leo dignissim convallis vitae eget sem. Aliquam auctor tellus id nibh vehicula luctus. Ut lobortis elit eu mauris iaculis euismod at id diam. Suspendisse et risus a dui hendrerit rhoncus. Nunc eu elit quis eros hendrerit venenatis. Aenean in elementum est. Curabitur accumsan rutrum erat eu elementum.
@@ -149,12 +149,14 @@
       </div>
     </div>
     <div class="span7 ">
-      <div>
+      <div class="spaceup">
         <h3>Contacto</h3>
-        <div >
-          <p><span style="color: #ff0000;">CEO. Mónica A. Aguilar Gomez</span></p>
-          <p><a href="/">Para contactarnos y saber más sobre el proyecto</a></p>
-        </div>
+        
+          <p style="color: #ff0000;">CEO. Mónica A. Aguilar Gomez</p>
+          <a href="http://facebook.com/shopdisenomx">
+            <img src="http://i.imgur.com/ksHgG2A.png">
+          </a>
+        
       </div>
     </div>
   </div>
